update pegadian
